# seqan

./: seq.txt
apps/benchmark_radixSort/: CMakeLists.txt  INFO
apps/benchmark_sa_construction/: benchmark_sa_construction.cpp
apps/compare_matches/: CMakeLists.txt  compare_matches.cpp
apps/runExtSACA/: CMakeLists.txt
apps/runSACA/: CMakeLists.txt  INFO  runSACA.cpp
apps/seqanLast/: seqanLast.cpp  seqanLast_IO.h  seqanLast_core.h  seqanLastdb.cpp
core/apps/seqanLast/: CMakeLists.txt  INFO  seqanLast.cpp  seqanLast_IO.h  seqanLast_core.h
core/include/seqan/modifier/: cyclic_shape.h  modifier_cyclic_shape.h
core/tests/inplace_radix_sort/: CMakeLists.txt  test_inplace_radix_sort.cpp  test_inplace_radix_sort.h
demos/bachelor/: FMIndextree.cpp  FMIndextree_backtrack.cpp  FMIndextree_backtrack_history.cpp  Indextrees.cpp  QGIndex.cpp  Qgrammin.cpp  SADislex.cpp  SADislex_ordered.cpp  SADislex_ordered_backtrack.cpp  SADislex_shortpattern.cpp  SADislex_small_example1.cpp  SADislex_small_example2.cpp  SAIndextree.cpp  SAIndextree_backtrack.cpp  SAIndextree_backtrack_history.cpp  backtrack.cpp  backtrack_history.cpp  backtrack_parallel.cpp  cutseq.cpp  makeread.cpp  makeseq.cpp  my_constdev.cpp  my_constdev2.cpp  my_constdev2alignsimple.cpp  my_constdev2fm.cpp  my_constdev2sa.cpp  my_constdev2sa_ordered_backtrack.cpp  my_constdev2sa_ordered_backtrack_parallel.cpp  my_constdev2satry.cpp  my_constdev2try.cpp  qtest.cpp  unsignedFMtest.cpp
extras/include/seqan/align_extend/: alignext.tar
include/seqan/: index.h  indexmyown.h  pipemyown.h
include/seqan/index/: find_index_core.h  find_index_esa.h  index_base.h  index_esa_stree.h  index_fm_compressed_sa.h  index_gapped_dislex.h  index_gapped_dislex_external.h  index_gapped_dislex_external4.h  index_gapped_dislex_external_ordered.h  index_gapped_sa.h  index_sa_lss.h  index_sa_qsort.h  index_sa_radixSort.h  index_sa_stree.h  radix_inplace.h
include/seqan/modifier/: cyclic_shape.h  modifier_cyclic_shape.h  modifier_reverse.h  modifier_string.h  modifier_view.h
include/seqan/pipe/: pipe_gapped_tupler.h  pool_base.h
include/seqan/score/: score_matrix.h
sandbox/meiers/apps/benchmark_SA_traversal/: CMakeLists.txt  INFO  benchmark_SA_traversal.cpp
sandbox/meiers/apps/benchmark_radixSort/: benchmark_radixSort.cpp
sandbox/meiers/apps/compare_matches/: INFO  compare_matches.cpp
sandbox/meiers/apps/runExtSACA/: INFO  runExtSACA.cpp
sandbox/meiers/apps/runSACA/: runSACA.cpp
sandbox/meiers/apps/seqanLast/: CMakeLists.txt  seqanLast.cpp  seqanLast_IO.h  seqanLast_core.h  seqanLastdb.cpp
tests/gappedIndex/: CMakeLists.txt  test_gappedIndex.cpp  test_gappedIndex_construction.h  test_gappedIndex_find.h  test_gappedIndex_stree.h
tests/gapped_index/: CMakeLists.txt  test_gappedIndex.cpp  test_gapped_index.cpp  test_gapped_index_construction.h
tests/inplace_radix_sort/: test_inplace_radix_sort.cpp
